--- a/style.css
+++ b/style.css
@@ -9,29 +9,62 @@ header {
    text-align: center;
 }
 
+.titles {
+   margin: 0.5 0 0.5rem 0rem
+}
+
 section {
-   background: #fff;
+   background: #ffffff;
    width: min(90vh, 600px);
    border: 1.2px solid #161616;
 
-   border-radius:0.5rem;
+   border-radius: 0.5rem;
 
    padding: 15px;
    width: 30rem;
    margin: auto;
-   
-   
 }
 
-#dice {
+/* #genre {
 
+} */
+
+
+
+
+
+#birthYear {
+   border: none;
+   border-bottom: 1px solid #1f1f1f;
+   font-size: 1.5rem;
+   outline: none;
+   font-family: 'JetBrains Mono';
+}
+
+.genres {
+   margin: 1rem 0 1rem 0;
+}
+
+#birthYear::placeholder {
+   color: #8a8383;
+   font-family: 'JetBrains Mono';
+   font-size: 1.4rem;
+}
+
+#check {
+   margin: 1rem 1rem 1rem 0;
 }
 
 
+#imgResult {
+   width: 15rem;
+   position: relative;
+   
+   left: 50%;
+   margin-top: 0.2rem;
+   margin-left: -7.5rem;
 
-
-#age::placeholder {
-   color: rgb(81, 85, 85);
+   border-radius: 100%;
 }
 
 footer {
