--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
    margin: 1.2rem;
-   background: #c2c0c0;
+   background: #484848;
    font-family: 'JetBrains Mono';
-   color: #0D0D0D;
+   color: #aeaeae;
 }
 
 header {
@@ -14,7 +14,7 @@ header {
 }
 
 section {
-   background: #ffffff;
+   background: #3f3f3f;
    width: min(90vh, 600px);
    border: 1.2px solid #161616;
 
@@ -24,14 +24,6 @@ section {
    width: 30rem;
    margin: auto;
 }
-
-/* #genre {
-
-} */
-
-
-
-
 
 #birthYear {
    border: none;
@@ -52,14 +44,28 @@ section {
 }
 
 #check {
-   margin: 1rem 1rem 1rem 0;
+   background-image: linear-gradient(to right, #232526 0%, #333333 51%, #1f1f1f 100%);
+   margin-top: 0.5rem;
+   padding: 0.6rem 2rem;
+   font-family: 'JetBrains Mono';
+   text-align: center;
+   transition: .2s;
+   background-size: 200% auto;
+   color: white;
+   display: block;
+   border: none;
+   outline: none;
 }
-
+#check:hover {
+   background-position: right center;
+   color: #fff;
+   text-decoration: none;
+}
 
 #imgResult {
    width: 15rem;
    position: relative;
-   
+
    left: 50%;
    margin-top: 0.2rem;
    margin-left: -7.5rem;
